# MachineLearning

IsaacGymRL/: .gitignore  README.md
IsaacGymRL/envs/: K1_Stand_Up.yaml  T1_Stand_Up.yaml  __init__.py  base_task.py  k1_stand_up.py  t1_stand_up.py
IsaacGymRL/pre-trained/: K1.onnx  RLGetUpEngine.cpp  RLGetUpEngine.h  T1.onnx  T1_stand_up.pt  boosterProvider_k1.cfg  boosterProvider_t1.cfg  rlGetUpEngine_k1.cfg  rlGetUpEngine_t1.cfg
IsaacGymRL/resources/K1/: K1_locomotion_all_joints_mesh.urdf  K1_locomotion_all_joints_simple.urdf
IsaacGymRL/resources/K1/meshes/: Trunk.STL
IsaacGymRL/resources/T1/: Ball_T1_locomotion_feet_box_left_bias.urdf  Ball_T1_locomotion_feet_box_right_bias.urdf  T1_collision_mesh.urdf  T1_collision_mesh_stand_up.urdf  T1_locomotion.urdf  T1_locomotion.xml  T1_locomotion_all_joints_simple.urdf  T1_locomotion_feet_box.urdf
IsaacGymRL/utils/: runner.py  terrain.py  utils.py
RefereeGestureClassifier/: .gitignore  README.md  pyproject.toml
RefereeGestureClassifier/referee_gesture_classifier/network/: built_dataset.py  callbacks.py  data_augmentation.py  generate_dataset.py  image.py  metrics.py  model_saver.py  models.py  parameters.py  referee_gesture_trainer.py
